Add full vuseum- layout

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             <img src="./images/burger.svg" alt="pic">
           </a>
           <a class="top-line__logo">
-            <img src="./images/NA MU.svg" alt="pic">
+            <img src="./images/NA MU.svg" alt="logo">
           </a>
         </div>
       </div>
@@ -159,44 +159,47 @@
 
       <div class="main__gallery gallery" id="gallery">
         <p class="gallery__title">Гaлерея</p>
-
         <div class="gallery__container">
-          <div class="gallery__picture picture picture--gallery" data-num="1">
+          <div class="picture picture--gallery">
             <img
               src="./images/g1.svg"
               alt="pic"
               class="picture__img picture__img--gallery"
             >
           </div>
-          <div class="gallery__picture picture picture--gallery" data-num="2">
+          <div class="picture picture--gallery">
             <img
               src="./images/g2.svg"
               alt="pic"
               class="picture__img picture__img--gallery"
             >
           </div>
-          <div class="gallery__picture picture picture--gallery" data-num="3">
+          <div class="picture picture--gallery">
             <img
               src="./images/g3.svg"
               alt="pic"
               class="picture__img picture__img--gallery"
             >
           </div>
-          <div class="gallery__picture picture picture--gallery" data-num="4">
+          <div class="picture picture--gallery">
             <img
               src="./images/g4.svg"
               alt="pic"
               class="picture__img picture__img--gallery"
             >
           </div>
-          <div class="gallery__picture picture picture--gallery" data-num="6">
+          <div
+            class="gallery__picture picture picture--gallery gallery__picture--5"
+          >
             <img
               src="./images/g5.svg"
               alt="pic"
               class="picture__img picture__img--gallery"
             >
           </div>
-          <div class="gallery__picture picture picture--gallery" data-num="6">
+          <div
+            class="gallery__picture picture picture--gallery gallery__picture--6"
+          >
             <img
               src="./images/g6.svg"
               alt="pic"
@@ -205,13 +208,118 @@
           </div>
         </div>
         <form class="gallery__choise">
-          <input type="radio" class="gallery__radio" name="choise" >
-          <input type="radio" class="gallery__radio" name="choise">
-          <input type="radio" class="gallery__radio" name="choise">
-          <input type="radio" class="gallery__radio" name="choise">
+          <input type="radio" class="gallery__radio" name="choise" value="1">
+          <input type="radio" class="gallery__radio" name="choise" value="2">
+          <input type="radio" class="gallery__radio" name="choise" value="3">
+          <input type="radio" class="gallery__radio" name="choise" value="4">
         </form>
+
+        <div class="gallery__container--large">
+          <div class="gallery__picture gallery__picture--1">
+            <img src="./images/g1.svg" alt="pic" class="gallery__img">
+          </div>
+          <div class="gallery__picture gallery__picture--2">
+            <img src="./images/g2.svg" alt="pic" class="gallery__img">
+          </div>
+          <div class="gallery__picture gallery__picture--3">
+            <img src="./images/g3.svg" alt="pic" class="gallery__img">
+          </div>
+          <div class="gallery__picture gallery__picture--4">
+            <img src="./images/g4.svg" alt="pic" class="gallery__img">
+          </div>
+          <div class="gallery__picture gallery__picture--5">
+            <img src="./images/g5.svg" alt="pic" class="gallery__img">
+          </div>
+          <div class="gallery__picture gallery__picture--6">
+            <img src="./images/g6.svg" alt="pic" class="gallery__img">
+          </div>
+        </div>
       </div>
     </main>
+    <footer class="footer page__footer">
+      <div class="footer__subscribe subscribe">
+        <p class="subscribe__title">Підписка</p>
+        <p class="subscribe__info">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form action="#" method="POST" class="subscribe__form form--footer">
+          <input type="email" class="form__input--footer" placeholder="Email">
+          <button class="form__btn" type="submit">
+            <img src="./images/arrow-black.png" alt="submit">
+          </button>
+        </form>
+      </div>
+      <div class="footer__contacts contacts" id="contacts">
+        <div class="contacts__logo-socials">
+          <a class="contacts__logo">
+            <img src="./images/NA MU.svg" alt="logo">
+          </a>
+          <div class="contacts__socials">
+            <a class="contacts__icon">
+              <img src="./images/facebook.png" alt="facebook">
+            </a>
+            <a class="contacts__icon">
+              <img src="./images/insta.png" alt="instagramm">
+            </a>
+          </div>
+        </div>
+        <div class="contacts__hours-phones">
+          <div class="contacts__hours">
+            <p class="contacts__text">Графік роботи</p>
+            <br>
+            <p class="contacts__text">
+              <strong>12:00—20:00&thinsp;</strong>
+              середа&ensp;&emsp;&emsp;&emsp;
+              <strong>12:00—20:00&nbsp;&nbsp;&nbsp;</strong>
+              четвер&ensp;&emsp;&emsp;&ensp;
+              <strong>12:00—20:00&emsp;&emsp;&emsp;</strong>
+              п’ятниця&ensp;&emsp;&emsp;&ensp;
+              <strong>11:00—19:00&ensp;&emsp;&emsp;&ensp;</strong>
+              субота&ensp;&emsp;&emsp;&ensp;&ensp;
+              <strong>11:00 — 19:00</strong>
+              неділя
+              <br>
+              <br>
+              Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </p>
+          </div>
+          <div class="contacts__phones">
+            <p class="contacts__text">Контакти:</p>
+            <br>
+            <p class="contacts__text">
+              вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
+              +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="footer__up-link">
+        <a class="footer__arrow-wrapper" href="#">
+          <img class="footer__up-arrow" src="./images/up-arrow.svg" alt="up">
+        </a>
+      </div>
+      <div class="footer__line"></div>
+      <div class="footer__links">
+        <div class="footer__right-links">
+          <a class="footer__link" href="#gallery">Галерея</a>
+          <a class="footer__link" href="#events">Виставки та події</a>
+          <a class="footer__link" href="#visit">Відвідування</a>
+          <a class="footer__link" href="#be-friend">Стати нашим другом</a>
+        </div>
+        <div class="footer__left-links">
+          <a class="footer__link" href="#about-us">Про Нас</a>
+          <a class="footer__link" href="#shop">Магазин</a>
+          <a class="footer__link" href="#blog">Блог</a>
+          <a class="footer__link" href="#contacts">Контакти</a>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__copyright">Designed by Zhyriada Marina.</p>
+        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
