--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer page__footer">
+     <footer class="footer page__footer">
       <div class="footer__subscribe subscribe">
         <p class="subscribe__title">Підписка</p>
         <p class="subscribe__info">
@@ -269,13 +269,13 @@
             <br>
             <p class="contacts__text">
               <strong>12:00—20:00&thinsp;</strong>
-              середа&ensp;&emsp;&emsp;&emsp;
-              <strong>12:00—20:00&nbsp;&nbsp;&nbsp;</strong>
-              четвер&ensp;&emsp;&emsp;&ensp;
-              <strong>12:00—20:00&emsp;&emsp;&emsp;</strong>
-              п’ятниця&ensp;&emsp;&emsp;&ensp;
-              <strong>11:00—19:00&ensp;&emsp;&emsp;&ensp;</strong>
-              субота&ensp;&emsp;&emsp;&ensp;&ensp;
+              середа<br>
+              <strong>12:00—20:00&thinsp;</strong>
+              четвер<br>
+              <strong>12:00—20:00&thinsp;</strong>
+              п’ятниця<br>
+              <strong>11:00—19:00&thinsp;</strong>
+              субота<br>
               <strong>11:00 — 19:00</strong>
               неділя
               <br>
@@ -307,7 +307,7 @@
           <a class="footer__link" href="#visit">Відвідування</a>
           <a class="footer__link" href="#be-friend">Стати нашим другом</a>
         </div>
-        <div class="footer__left-links">
+       <div class="footer__left-links">
           <a class="footer__link" href="#about-us">Про Нас</a>
           <a class="footer__link" href="#shop">Магазин</a>
           <a class="footer__link" href="#blog">Блог</a>
@@ -319,7 +319,7 @@
         <p class="footer__copyright">Designed by Zhyriada Marina.</p>
         <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
       </div>
-    </footer>
+    </footer> 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
