--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,85 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header"></header>
+    <header hidden class="header page__section">
+      <div class="header__nav">
+        <a href="#" class="header__menu-opener"></a>
+        <a href="#" class="logo">
+          NA
+          <br>
+          MU
+        </a>
+      </div>
+      <h1 class="header__title">
+        ХУДОЖНІЙ
+        <br>
+        МУЗЕЙ
+      </h1>
+    </header>
+    <main>
+      <section class="events">
+        <h2 class="events__title">Актуальні події</h2>
+        <div class="events__conteiner">
+          <img
+            class="events__img"
+            src="images/pictureNumberOne.svg"
+            alt="Картина 1"
+          >
+          <div class="events__info">
+            <div class="events__date-conteiner">
+              <a class="events__name">Виставка</a>
+              <div class="events__date">26.08-29.11.2019</div>
+            </div>
+            <h3 class="events__title-text">Йду і повертаюсь</h3>
+            <p class="events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
+              половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__conteiner">
+          <img
+            class="events__img"
+            src="images/pictureNumberTwo.svg"
+            alt="Картина 2"
+          >
+          <div class="events__info">
+            <div class="events__date-conteiner">
+              <a class="events__name">Виставка</a>
+              <div class="events__date">26.08-29.11.2019</div>
+            </div>
+            <h3 class="events__title-text">І спогади і мрії</h3>
+            <p class="events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <img
+          class="lecture__img"
+          src="images/pictureNumberThree.svg"
+          alt="Картина 3"
+        >
+        <div class="lecture__info">
+          <div class="lecture__date-conteiner">
+            <a class="lecture__name">ЛЕКЦІЯ</a>
+            <div class="lecture__date">26/08/2019 - 11:00</div>
+          </div>
+          <h3 class="lecture__title-text">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+      <section class="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <img
+          src="images/photoFromGallery1.svg"
+          alt="Картина"
+          class="gallery__img">
+      </section>
+    </main>
+    <footer class="footer"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
