--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,17 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header hidden class="header page__section">
-      <div class="header__nav">
-        <a href="#" class="header__menu-opener"></a>
-        <a href="#" class="logo">
+    <header class="header page__section">
+      <div class="header__img-conteiner">
+        <img
+          src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg"
+          alt="Національний художній музей України"
+          class="header__logo"
+        >
+        <a href="#" class="header__menu-opener">
+          <img src="images/Button.svg" alt="">
+        </a>
+        <a href="#" class="header__logo-small">
           NA
           <br>
           MU
@@ -24,7 +31,20 @@
         <br>
         МУЗЕЙ
       </h1>
+      <a class="header__button-container" href="#">
+        <div class="header__button-big">Квитки</div>
+        <div class="header__button-small">
+          <div class="header">
+            <img
+              src="images/forThebutton.svg"
+              alt=""
+              class="header__for-button"
+            >
+          </div>
+        </div>
+      </a>
     </header>
+
     <main>
       <section class="events">
         <h2 class="events__title">Актуальні події</h2>
