--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -11,12 +11,7 @@
   </head>
   <body class="page__body">
     <header class="header page__section">
-      <div class="header__img-conteiner">
-        <img
-          src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg"
-          alt="Національний художній музей України"
-          class="header__logo"
-        >
+      <div class="header__conteiner">
         <a href="#" class="header__menu-opener">
           <img src="images/Button.svg" alt="">
         </a>
@@ -26,6 +21,8 @@
           MU
         </a>
       </div>
+      <div class="header__img"></div>
+
       <h1 class="header__title">
         ХУДОЖНІЙ
         <br>
@@ -34,13 +31,11 @@
       <a class="header__button-container" href="#">
         <div class="header__button-big">Квитки</div>
         <div class="header__button-small">
-          <div class="header">
-            <img
-              src="images/forThebutton.svg"
-              alt=""
-              class="header__for-button"
-            >
-          </div>
+          <img
+            src="images/forThebutton.svg"
+            alt=""
+            class="header__for-button"
+          >
         </div>
       </a>
     </header>
@@ -100,12 +95,28 @@
           <h3 class="lecture__title-text">Від класицизму до романтизму</h3>
         </div>
       </section>
+
       <section class="gallery">
         <h2 class="gallery__title">Галерея</h2>
         <img
           src="images/photoFromGallery1.svg"
           alt="Картина"
           class="gallery__img">
+      </section>
+
+      <section class="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+        <div class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+        <form action="POST" class="subscription__form">
+          <input
+            type="text"
+            name="email"
+            class="subscription__email"
+            placeholder="E-mail"
+            required
+          >
+          <button class="subscription__button"></button>
+        </form>
       </section>
     </main>
     <footer class="footer"></footer>
