--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,202 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__section" hidden>
+      <div class="container">
+        <div class="header__image-container">
+          <img
+            src="./images/header/header-desktop.jpg"
+            alt="Museum"
+            class="header__image"
+          >
+        </div>
+        <div class="header__content">
+          <div class="top-actions">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            >
+            </a>
+            <a href="#" class="logo">
+              <img
+                src="./images/logo.png"
+                alt="NA MU"
+                class="logo__image"
+                >
+            </a>
+          </div>
+          <h1 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+        </div>
+      </div>
+    </header>
+    <!-- <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a
+              href="#"
+              class="icon icon--cross"
+            >
+            </a>
+            <a href="/" class="logo">
+              <img
+                src="./images/logo.png"
+                alt="Miami Condo Kings"
+                class="logo__image"
+                >
+            </a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">About us</a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Gallery</a>
+            </li>
+            <li class="menu__item">
+              <a href="#testimonials" class="menu__link">Testimonials</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contact-us" class="menu__link">Contact</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call menu__call--phone"
+          >
+            +1 234 555-55-55
+          </a>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call menu__call--action"
+          >
+            call to order
+          </a>
+        </div>
+      </div>
+    </nav> -->
+    <main>
+      <section class="page__section events" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+          <div class="events__place place">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-8">
+                <div class="place__photo-container">
+                  <img
+                  src="./images/main/main-1.png"
+                  alt="First event"
+                  class="place__photo"
+                >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--9-12">
+                <div class="description description__container">
+                  <span class="description__title">
+                    ВИСТАВКА
+                  </span>
+                  <span class="description__date">
+                    26.08-29.11.2019
+                  </span>
+                  <div class="description__name">
+                    Йду і повертаюсь
+                  </div>
+                  <div class="description__content">
+                    Національний Художній Музей України презентує унікальну частину колекції
+                    Градобанку - українське мистецтво другої половини
+                    <br>
+                    1980-1995 років.
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="events__place place">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--6-12">
+                <div class="place__photo-container">
+                  <img
+                  src="./images/main/main-3.png"
+                  alt="Second event"
+                  class="place__photo"
+                >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--1-4">
+                <div class="description description__container">
+                  <span class="description__title">
+                    ВИСТАВКА
+                  </span>
+                  <span class="description__date">
+                    26.08-29.11.2019
+                  </span>
+                  <div class="description__name">
+                    І спогади і мрії
+                  </div>
+                  <div class="description__content">
+                    Національний художній музей України до 100 річчя від дня народження
+                    видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="events__place place">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-12">
+                <div class="place__photo-container">
+                  <img
+                  src="./images/main/main-2.png"
+                  alt="Second event"
+                  class="place__photo"
+                >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--1-4">
+                <div class="description description__container">
+                  <span class="description__title">
+                    ЛЕКЦІЯ
+                  </span>
+                  <span class="description__date">
+                    26/08/2019 - 11:00
+                  </span>
+                  <div class="description__name description__name--last">
+                    Від класицизму до романтизму
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
