80% solution for 1280px

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,8 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header page__section" hidden>
+    <header class="header page__section">
       <div class="container">
-        <div class="header__image-container">
-          <img
-            src="./images/header/header-desktop.jpg"
-            alt="Museum"
-            class="header__image"
-          >
-        </div>
         <div class="header__content">
           <div class="top-actions">
             <a
@@ -32,9 +25,28 @@
                 >
             </a>
           </div>
-          <h1 class="header__title">
-            ХУДОЖНІЙ МУЗЕЙ
-          </h1>
+          <div class="header__title-button">
+            <h1 class="header__title">
+              ХУДОЖ<span class="header__title--style">НІЙ</span>
+              <br>
+              <span class="header__title--museum">МУЗЕЙ</span>
+            </h1>
+            <div class="header__button button__container">
+              <div class="button button__title">квитки</div>
+              <a class="button button__intro" href="#">></a>
+            </div>
+          </div>
+          <div class="header__subtitle">
+            <div class="header__subtitle-name">події</div>
+            <div class="header__subtitle-line"></div>
+          </div>
+        </div>
+        <div class="header__image-container">
+          <img
+            src="./images/header/header-desktop.jpg"
+            alt="Museum"
+            class="header__image"
+          >
         </div>
       </div>
     </header>
@@ -98,7 +110,7 @@
           </h2>
           <div class="events__place place">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-8">
+              <div class="grid__item grid__item--1-7">
                 <div class="place__photo-container">
                   <img
                   src="./images/main/main-1.png"
@@ -142,7 +154,7 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--1-4">
+              <div class="grid__item grid__item--1-4 grid__row--1">
                 <div class="description description__container">
                   <span class="description__title">
                     ВИСТАВКА
@@ -175,16 +187,20 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--1-4">
-                <div class="description description__container">
-                  <span class="description__title">
-                    ЛЕКЦІЯ
-                  </span>
-                  <span class="description__date">
-                    26/08/2019 - 11:00
-                  </span>
-                  <div class="description__name description__name--last">
-                    Від класицизму до романтизму
+              <div class="grid__item grid__item--4-8">
+                <div class="description">
+                  <div class="description__block">
+                    <span class="description__title">
+                      ЛЕКЦІЯ
+                    </span>
+                    <span class="description__date description__date--last">
+                      26/08/2019 - 11:00
+                    </span>
+                    <div class="description__name description__name--last">
+                      Від класицизму до
+                      <br>
+                      романтизму
+                    </div>
                   </div>
                 </div>
               </div>
@@ -193,10 +209,60 @@
           </div>
         </div>
       </section>
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+          <div class="gallery__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item grid__item--desktop-1-4">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                    src="./images/gallery/4.png"
+                    alt="first photo"
+                    class="place__photo"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desktop-5-12">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                      src="./images/gallery/1.png"
+                      alt="second photo"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desktop-1-8">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                    src="./images/gallery/2.png"
+                    alt="third photo"
+                    class="place__photo"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desktop-9-12">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                    src="./images/gallery/3.png"
+                    alt="fourth photo"
+                    class="place__photo"
+                  >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-
+      <span>Copyright © 2019. All Rights Reserved.</span>
+      <span>Designed by Zhyriada Marina</span>
     </footer>
   </body>
 </html>
