--- a/src/index.html
+++ b/src/index.html
@@ -9,45 +9,32 @@
   </head>
   <body class="page__body">
     <header class="header page__section">
-      <div class="container">
-        <div class="header__content">
-          <div class="top-actions">
-            <a
-              href="#menu"
-              class="icon icon--menu"
-            >
-            </a>
-            <a href="#" class="logo">
-              <img
-                src="./images/logo.png"
-                alt="NA MU"
-                class="logo__image"
-                >
-            </a>
-          </div>
-          <div class="header__title-button">
-            <h1 class="header__title">
-              ХУДОЖ<span class="header__title--style">НІЙ</span>
-              <br>
-              <span class="header__title--museum">МУЗЕЙ</span>
-            </h1>
-            <div class="header__button button__container">
-              <div class="button button__title">квитки</div>
-              <a class="button button__intro" href="#">></a>
-            </div>
-          </div>
-          <div class="header__subtitle">
-            <div class="header__subtitle-name">події</div>
-            <div class="header__subtitle-line"></div>
-          </div>
-        </div>
-        <div class="header__image-container">
+      <div class="header__background top-actions container">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        >
+        </a>
+        <a href="#" class="logo">
           <img
-            src="./images/header/header-desktop.jpg"
-            alt="Museum"
-            class="header__image"
-          >
-        </div>
+            src="./images/logo.png"
+            alt="NA MU"
+            class="logo__image"
+            >
+        </a>
+      </div>
+      <h1 class="header__title container">
+        ХУДОЖ<span class="header__title--style">НІЙ</span>
+        <br>
+        <span class="header__title--museum">МУЗЕЙ</span>
+      </h1>
+      <div class="header__button button__container container">
+        <div class="button button__title">квитки</div>
+        <a class="button button__intro" href="#">></a>
+      </div>
+      <div class="header__subtitle container">
+        <div class="header__subtitle-name">події</div>
+        <div class="header__subtitle-line"></div>
       </div>
     </header>
     <!-- <nav class="page__menu menu" id="menu">
@@ -67,7 +54,6 @@
                 >
             </a>
           </div>
-
           <ul class="menu__list">
             <li class="menu__item">
               <a href="#" class="menu__link">Home</a>
@@ -85,14 +71,12 @@
               <a href="#contact-us" class="menu__link">Contact</a>
             </li>
           </ul>
-
           <a
             href="tel:+1 234 555-55-55"
             class="menu__call menu__call--phone"
           >
             +1 234 555-55-55
           </a>
-
           <a
             href="tel:+1 234 555-55-55"
             class="menu__call menu__call--action"
@@ -182,29 +166,25 @@
                   <img
                   src="./images/main/main-2.png"
                   alt="Second event"
-                  class="place__photo"
+                  class="place__photo place__photo--last"
                 >
                 </div>
               </div>
 
-              <div class="grid__item grid__item--4-8">
-                <div class="description">
-                  <div class="description__block">
-                    <span class="description__title">
-                      ЛЕКЦІЯ
-                    </span>
-                    <span class="description__date description__date--last">
-                      26/08/2019 - 11:00
-                    </span>
-                    <div class="description__name description__name--last">
-                      Від класицизму до
-                      <br>
-                      романтизму
-                    </div>
+              <div class="grid__item grid__item--4-8 gallery__kostul">
+                <div class="description__block">
+                  <span class="description__title description__title--last">
+                    ЛЕКЦІЯ
+                  </span>
+                  <span class="description__date description__date--last">
+                    26/08/2019 - 11:00
+                  </span>
+                  <div class="description__name description__name--last">
+                    Від класицизму <br>
+                    до романтизму
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -231,7 +211,7 @@
                     <img
                       src="./images/gallery/1.png"
                       alt="second photo"
-                      class="place__photo"
+                      class="place__photo place__photo--hidden"
                     >
                   </div>
                 </div>
@@ -240,7 +220,7 @@
                     <img
                     src="./images/gallery/2.png"
                     alt="third photo"
-                    class="place__photo"
+                    class="place__photo place__photo--hidden"
                   >
                   </div>
                 </div>
@@ -249,7 +229,7 @@
                     <img
                     src="./images/gallery/3.png"
                     alt="fourth photo"
-                    class="place__photo"
+                    class="place__photo place__photo--hidden"
                   >
                   </div>
                 </div>
@@ -258,11 +238,121 @@
           </div>
         </div>
       </section>
-    </main>
 
-    <footer class="footer">
-      <span>Copyright © 2019. All Rights Reserved.</span>
-      <span>Designed by Zhyriada Marina</span>
+      <section class="page__section substriction" id="substriction">
+        <div class="substriction__container substriction__background">
+          <span class="substriction__title">Підписка</span>
+          <span class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</span>
+          <div class="substriction__form container">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="substriction__input"
+            >
+            <button class="substriction__button">
+              <img src="./images/botton-form.svg" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="substriction__links container">
+          <a href="#" class="logo">
+            <img
+              src="./images/logo.png"
+              alt="NA MU"
+              class="logo__image"
+              >
+          </a>
+          <div class="substriction__links--icon">
+            <a href="#">
+              <img
+                src="./images/facebook.svg"
+                alt="NA MU"
+                class="substriction__icon"
+                >
+            </a>
+            <a href="#">
+              <img
+                src="./images/inst.svg"
+                alt="NA MU"
+                class="substriction__icon"
+                >
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer container">
+      <div class="grid grid--desktop">
+        <div class="grid__item grid__item--1-3">
+          <div class="footer__content">
+            <div class="footer__schedule">
+              Графік роботи
+              <br><br>
+              <strong>12:00 — 20:00</strong>
+              <br>середа<br>
+              <strong>12:00 — 20:00</strong>
+              <br>четвер<br>
+              <strong>12:00 — 20:00</strong>
+              <br>п’ятниця<br>
+              <strong>11:00 — 19:00</strong>
+              <br>субота<br>
+              <strong>11:00 — 19:00</strong>
+              <br>неділя<br><br>
+
+              Вихідні понеділок, вівторок
+              <br>Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+            <div class="footer__contacts">
+              Контакти:<br><br>
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </div>
+            <button type="submit" class="footer__button footer__button--back">
+              <img src="./images/button.svg" alt="buton">
+            </button>
+            <div class="footer__hr"></div>
+            <div class="footer__menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#about-us" class="menu__link">Виставки та події</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Відвідування</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#testimonials" class="menu__link">Стати нашим другом</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__about">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#about-us" class="menu__link">Магазин</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Блог</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#testimonials" class="menu__link">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__rules">Designed by Zhyriada Marina
+        <br><br>
+        Copyright © 2019. All Rights Reserved.
+      </div>
     </footer>
   </body>
 </html>
