--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,49 @@
   </head>
   <body class="page__body">
     <header class="header page__section">
-      <div class="header__background top-actions container">
-        <a
-          href="#menu"
-          class="icon icon--menu"
-        >
-        </a>
-        <a href="#" class="logo">
-          <img
-            src="./images/logo.png"
-            alt="NA MU"
-            class="logo__image"
+      <div class="grid grid--desktop">
+        <div class="grid__item grid__item--1-16 grid__row--1">
+          <div class="header__background top-actions container">
+            <a
+              href="#menu"
+              class="icon icon--menu"
             >
-        </a>
-      </div>
-      <h1 class="header__title container">
-        ХУДОЖ<span class="header__title--style">НІЙ</span>
-        <br>
-        <span class="header__title--museum">МУЗЕЙ</span>
-      </h1>
-      <div class="header__button button__container container">
-        <div class="button button__title">квитки</div>
-        <a class="button button__intro" href="#">></a>
-      </div>
-      <div class="header__subtitle container">
-        <div class="header__subtitle-name">події</div>
-        <div class="header__subtitle-line"></div>
+            </a>
+            <a href="#" class="logo">
+              <img
+                src="./images/logo.png"
+                alt="NA MU"
+                class="logo__image"
+                >
+            </a>
+          </div>
+        </div>
+        <div class="grid__item grid__item--6-16 grid__row--1 container">
+          <img
+          src="./images/header/header-desktop-1920p.jpg"
+          alt="header-desktop-1920p"
+          class="header__desktop"
+          >
+        </div>
+        <div class="grid__item grid__item--5-8">
+          <h1 class="header__title">
+            ХУДОЖ<span class="header__title--style">НІЙ</span>
+            <br>
+            <span class="header__title--museum">МУЗЕЙ</span>
+          </h1>
+        </div>
+        <div class="grid__item grid__item--5-8 grid__row--4">
+          <div class="header__button button__container container__absolute">
+            <div class="button button__title">квитки</div>
+            <a class="button button__intro" href="#">></a>
+          </div>
+        </div>
+        <div class="grid__item grid__item--1-2">
+          <div class="header__subtitle container">
+            <div class="header__subtitle-name">події</div>
+            <div class="header__subtitle-line"></div>
+          </div>
+        </div>
       </div>
     </header>
     <!-- <nav class="page__menu menu" id="menu">
@@ -88,106 +105,104 @@
     </nav> -->
     <main>
       <section class="page__section events" id="events">
-        <div class="container">
-          <h2 class="page__section-title">
-            Актуальні події
-          </h2>
-          <div class="events__place place">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-7">
-                <div class="place__photo-container">
-                  <img
-                  src="./images/main/main-1.png"
-                  alt="First event"
-                  class="place__photo"
-                >
-                </div>
+        <h2 class="page__section-title container">
+          Актуальні події
+        </h2>
+        <div class="events__place place container">
+          <div class="grid grid--desktop grid--main">
+            <div class="grid__item grid__item--1-8">
+              <div class="place__photo-container">
+                <img
+                src="./images/main/main-1.png"
+                alt="First event"
+                class="place__photo place__photo--main"
+              >
               </div>
-
-              <div class="grid__item grid__item--9-12">
-                <div class="description description__container">
-                  <span class="description__title">
-                    ВИСТАВКА
-                  </span>
-                  <span class="description__date">
-                    26.08-29.11.2019
-                  </span>
-                  <div class="description__name">
-                    Йду і повертаюсь
-                  </div>
-                  <div class="description__content">
-                    Національний Художній Музей України презентує унікальну частину колекції
-                    Градобанку - українське мистецтво другої половини
-                    <br>
-                    1980-1995 років.
-                  </div>
-                </div>
-              </div>
-
             </div>
+
+            <div class="grid__item grid__item--11-14 grid__row--2">
+              <div class="description description__container">
+                <span class="description__title">
+                  ВИСТАВКА
+                </span>
+                <span class="description__date">
+                  26.08-29.11.2019
+                </span>
+                <div class="description__name">
+                  Йду і повертаюсь
+                </div>
+                <div class="description__content">
+                  Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини
+                  <br>
+                  1980-1995 років.
+                </div>
+              </div>
+            </div>
+
           </div>
-          <div class="events__place place">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--6-12">
-                <div class="place__photo-container">
-                  <img
+        </div>
+        <div class="events__place place container">
+          <div class="grid grid--desktop grid--main">
+            <div class="grid__item grid__item--8-16">
+              <div class="place__photo-container">
+                <img
                   src="./images/main/main-3.png"
                   alt="Second event"
-                  class="place__photo"
+                  class="place__photo place__photo--main"
                 >
-                </div>
               </div>
-
-              <div class="grid__item grid__item--1-4 grid__row--1">
-                <div class="description description__container">
-                  <span class="description__title">
-                    ВИСТАВКА
-                  </span>
-                  <span class="description__date">
-                    26.08-29.11.2019
-                  </span>
-                  <div class="description__name">
-                    І спогади і мрії
-                  </div>
-                  <div class="description__content">
-                    Національний художній музей України до 100 річчя від дня народження
-                    видатної української художниці Тетяни Яблонської
-                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                  </div>
-                </div>
-              </div>
-
             </div>
-          </div>
-          <div class="events__place place">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-12">
-                <div class="place__photo-container">
-                  <img
-                  src="./images/main/main-2.png"
-                  alt="Second event"
-                  class="place__photo place__photo--last"
-                >
-                </div>
-              </div>
 
-              <div class="grid__item grid__item--4-8 gallery__kostul">
-                <div class="description__block">
-                  <span class="description__title description__title--last">
-                    ЛЕКЦІЯ
-                  </span>
-                  <span class="description__date description__date--last">
-                    26/08/2019 - 11:00
-                  </span>
-                  <div class="description__name description__name--last">
-                    Від класицизму <br>
-                    до романтизму
-                  </div>
+            <div class="grid__item grid__item--3-6 grid__row--2">
+              <div class="description description__container">
+                <span class="description__title">
+                  ВИСТАВКА
+                </span>
+                <span class="description__date">
+                  26.08-29.11.2019
+                </span>
+                <div class="description__name">
+                  І спогади і мрії
+                </div>
+                <div class="description__content">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="events__place place">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--1-16">
+              <div class="place__photo-container">
+                <img
+                  src="./images/main/main-2.png"
+                  alt="Second event"
+                  class="place__photo place__photo--last place__photo--last-desktop"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--6-11 gallery__kostul grid__row--6">
+              <div class="description__block">
+                <span class="description__title description__title--last">
+                  ЛЕКЦІЯ
+                </span>
+                <span class="description__date description__date--last">
+                  26/08/2019 - 11:00
+                </span>
+                <div class="description__name description__name--last">
+                  Від класицизму <br>
+                  до романтизму
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
       <section class="page__section gallery" id="gallery">
         <div class="container">
@@ -196,40 +211,58 @@
           </h2>
           <div class="gallery__place place">
             <div class="place__photos">
-              <div class="grid">
-                <div class="grid__item grid__item--desktop-1-4">
+              <div class="grid grid--desktop grid--gallery">
+                <div class="grid__item grid__item--desktop-1-4 grid__row-1">
                   <div class="place__photo-container place__photo-gallery">
                     <img
                     src="./images/gallery/4.png"
                     alt="first photo"
-                    class="place__photo"
+                    class="place__photo place__photo--high-resolution"
                   >
                   </div>
                 </div>
-                <div class="grid__item grid__item--desktop-5-12">
+                <div class="grid__item grid__item--desktop-5-12 grid__row-1">
                   <div class="place__photo-container place__photo-gallery">
                     <img
                       src="./images/gallery/1.png"
                       alt="second photo"
-                      class="place__photo place__photo--hidden"
+                      class="place__photo place__photo--hidden place__photo--high-resolution"
                     >
                   </div>
                 </div>
-                <div class="grid__item grid__item--desktop-1-8">
+                <div class="grid__item grid__item--desktop-1-9 grid__row--20">
                   <div class="place__photo-container place__photo-gallery">
                     <img
                     src="./images/gallery/2.png"
                     alt="third photo"
-                    class="place__photo place__photo--hidden"
+                    class="place__photo place__photo--hidden place__photo--high-resolution"
                   >
                   </div>
                 </div>
-                <div class="grid__item grid__item--desktop-9-12">
+                <div class="grid__item grid__item--desktop-9-12 grid__row--20">
                   <div class="place__photo-container place__photo-gallery">
                     <img
                     src="./images/gallery/3.png"
                     alt="fourth photo"
-                    class="place__photo place__photo--hidden"
+                    class="place__photo place__photo--hidden place__photo--high-resolution"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desktop-13-16 grid__row--1">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                    src="./images/gallery/5.jpg"
+                    alt="five photo"
+                    class="place__photo place__photo--hidden place__photo--high-resolution"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desktop-13-16 grid__row--20">
+                  <div class="place__photo-container place__photo-gallery">
+                    <img
+                    src="./images/gallery/6.jpg"
+                    alt="six photo"
+                    class="place__photo place__photo--hidden place__photo--high-resolution"
                   >
                   </div>
                 </div>
