--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
         </div>
       </div>
     </header>
+
     <!-- <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
@@ -273,118 +274,137 @@
       </section>
 
       <section class="page__section substriction" id="substriction">
-        <div class="substriction__container substriction__background">
-          <span class="substriction__title">Підписка</span>
-          <span class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</span>
-          <div class="substriction__form container">
-            <input
-              type="email"
-              placeholder="E-mail"
-              class="substriction__input"
-            >
-            <button class="substriction__button">
-              <img src="./images/botton-form.svg" alt="">
-            </button>
+        <div class="grid grid--desktop">
+          <div class="grid__item grid__item--1-16">
+            <div class="substriction__container substriction__background"></div>
           </div>
-        </div>
-        <div class="substriction__links container">
-          <a href="#" class="logo">
-            <img
-              src="./images/logo.png"
-              alt="NA MU"
-              class="logo__image"
-              >
-          </a>
-          <div class="substriction__links--icon">
-            <a href="#">
-              <img
-                src="./images/facebook.svg"
-                alt="NA MU"
-                class="substriction__icon"
+          <div class="grid__item grid__item--6-10 grid__row-3 grid--desktop">
+            <span class="substriction__title container">Підписка</span>
+          </div>
+          <div class="grid__item grid__item--3-13 grid__row-3 grid--desktop">
+            <span class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</span>
+          </div>
+          <div class="grid__item grid__item--6-13 grid--desktop">
+            <div class="substriction__form container__absolute">
+              <form action="#" method="get">
+                <input
+                  type="email"
+                  placeholder="E-mail"
+                  class="substriction__input"
                 >
-            </a>
-            <a href="#">
-              <img
-                src="./images/inst.svg"
-                alt="NA MU"
-                class="substriction__icon"
-                >
-            </a>
+                <button class="substriction__button" type="submit">
+                  <img src="./images/botton-form.svg" alt="">
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
     </main>
+
     <footer class="footer container">
       <div class="grid grid--desktop">
-        <div class="grid__item grid__item--1-3">
-          <div class="footer__content">
-            <div class="footer__schedule">
-              Графік роботи
-              <br><br>
-              <strong>12:00 — 20:00</strong>
-              <br>середа<br>
-              <strong>12:00 — 20:00</strong>
-              <br>четвер<br>
-              <strong>12:00 — 20:00</strong>
-              <br>п’ятниця<br>
-              <strong>11:00 — 19:00</strong>
-              <br>субота<br>
-              <strong>11:00 — 19:00</strong>
-              <br>неділя<br><br>
-
-              Вихідні понеділок, вівторок
-              <br>Каса припиняє роботу за 1 годину
-              до закриття музею
-            </div>
-            <div class="footer__contacts">
-              Контакти:<br><br>
-              вул. М. Грушевського, 6; Київ, 01001
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
-            </div>
-            <button type="submit" class="footer__button footer__button--back">
-              <img src="./images/button.svg" alt="buton">
-            </button>
-            <div class="footer__hr"></div>
-            <div class="footer__menu">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Галерея</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#about-us" class="menu__link">Виставки та події</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Відвідування</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#testimonials" class="menu__link">Стати нашим другом</a>
-                </li>
-              </ul>
-            </div>
-            <div class="footer__about">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a href="#" class="menu__link">Про Нас</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#about-us" class="menu__link">Магазин</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Блог</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#testimonials" class="menu__link">Контакти</a>
-                </li>
-              </ul>
+        <div class="grid__item grid__item--1-2">
+          <div class="footer__links container__absolute">
+            <a href="#" class="logo--footer">
+              <img
+                src="./images/logo.png"
+                alt="NA MU"
+                class="logo__image"
+                >
+            </a>
+            <div class="footer__links--icon">
+              <a href="#">
+                <img
+                  src="./images/facebook.svg"
+                  alt="NA MU"
+                  class="footer__icon"
+                  >
+              </a>
+              <a href="#">
+                <img
+                  src="./images/inst.svg"
+                  alt="NA MU"
+                  class="footer__icon"
+                  >
+              </a>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer__rules">Designed by Zhyriada Marina
-        <br><br>
-        Copyright © 2019. All Rights Reserved.
+        <div class="grid__item grid__item--3-5">
+          <div class="footer__schedule">
+            Графік роботи
+            <br><br>
+            <strong>12:00 — 20:00</strong>
+            середа<br>
+            <strong>12:00 — 20:00</strong>
+            четвер<br>
+            <strong>12:00 — 20:00</strong>
+            п’ятниця<br>
+            <strong>11:00 — 19:00</strong>
+            субота<br>
+            <strong>11:00 — 19:00</strong>
+            неділя<br><br>
+            Вихідні понеділок,<br> вівторок
+            <br>Каса припиняє роботу <br>за 1 годину
+            <br>до закриття музею
+          </div>
+        </div>
+        <div class="grid__item grid__item--6-7">
+          <div class="footer__contacts">
+            Контакти:<br><br>
+            вул. М. Грушевського, 6; Київ, 01001
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54
+            e-mail: info@namu.kiev.ua
+          </div>
+          <button type="submit" class="footer__button footer__button--back">
+            <img src="./images/button.svg" alt="buton">
+          </button>
+        </div>
+        <div class="footer__hr"></div>
+        <div class="grid__item grid__item--11-12 grid__row--1">
+          <div class="footer__menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#about-us" class="menu__link">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Відвідування</a>
+              </li>
+              <li class="menu__item">
+                <a href="#testimonials" class="menu__link">Стати нашим другом</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item grid__item--14-15 grid__row--1">
+          <div class="footer__about">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#about-us" class="menu__link">Магазин</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Блог</a>
+              </li>
+              <li class="menu__item">
+                <a href="#testimonials" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item grid__item--1-3 grid__row--5 footer__rules">
+          Designed by Zhyriada Marina
+        </div>
+        <div class="grid__item grid__item--13-16 grid__row--5 footer__rules">
+          Copyright © 2019. All Rights Reserved.
+        </div>
       </div>
     </footer>
   </body>
