--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
         <div class="events__place place">
           <div class="grid grid--desktop">
             <div class="grid__item grid__item--1-16">
-              <div class="place__photo-container">
+              <div class="place__photo-container container__mobile">
                 <img
                   src="./images/main/main-2.png"
                   alt="Second event"
@@ -218,7 +218,7 @@
                     <img
                     src="./images/gallery/4.png"
                     alt="first photo"
-                    class="place__photo place__photo--high-resolution"
+                    class="place__photo place__photo--high-resolution gallery"
                   >
                   </div>
                 </div>
@@ -274,28 +274,27 @@
       </section>
 
       <section class="page__section substriction" id="substriction">
-        <div class="grid grid--desktop">
-          <div class="grid__item grid__item--1-16">
-            <div class="substriction__container substriction__background"></div>
-          </div>
-          <div class="grid__item grid__item--6-10 grid__row-3 grid--desktop">
-            <span class="substriction__title container">Підписка</span>
-          </div>
-          <div class="grid__item grid__item--3-13 grid__row-3 grid--desktop">
-            <span class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</span>
-          </div>
-          <div class="grid__item grid__item--6-13 grid--desktop">
-            <div class="substriction__form container__absolute">
-              <form action="#" method="get">
-                <input
-                  type="email"
-                  placeholder="E-mail"
-                  class="substriction__input"
-                >
-                <button class="substriction__button" type="submit">
-                  <img src="./images/botton-form.svg" alt="">
-                </button>
-              </form>
+        <div class="substriction__container substriction__background">
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--6-10 grid__row-3 grid--desktop">
+              <div class="substriction__title container__mobile">Підписка</div>
+            </div>
+            <div class="grid__item grid__item--5-13 grid__row-3 grid--desktop">
+              <div class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</div>
+            </div>
+            <div class="grid__item grid__item--6-13 grid--desktop">
+              <div class="substriction__form container container__absolute">
+                <form action="#" method="get">
+                  <input
+                    type="email"
+                    placeholder="E-mail"
+                    class="substriction__input"
+                  >
+                  <button class="substriction__button" type="submit">
+                    <img src="./images/botton-form.svg" alt="">
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
