--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>IMuseum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
+    <link
+      rel="shortcut icon"
+      href="/images/favicon/favicon.ico"
+      type="image/x-icon"
+    >
   </head>
   <body class="page__body">
     <header class="header page__section">
@@ -26,7 +31,7 @@
             </a>
           </div>
         </div>
-        <div class="grid__item grid__item--6-16 grid__row--1 container">
+        <div class="grid__item grid__item--7-16 grid__row--1">
           <img
           src="./images/header/header-desktop-1920p.jpg"
           alt="header-desktop-1920p"
@@ -58,49 +63,20 @@
     <!-- <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <div class="menu__top top-actions">
-            <a
-              href="#"
-              class="icon icon--cross"
-            >
-            </a>
-            <a href="/" class="logo">
-              <img
-                src="./images/logo.png"
-                alt="Miami Condo Kings"
-                class="logo__image"
-                >
-            </a>
-          </div>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Home</a>
+              <a href="#" class="menu__link">Галерея</a>
             </li>
             <li class="menu__item">
-              <a href="#about-us" class="menu__link">About us</a>
+              <a href="#about-us" class="menu__link">Виставки та події</a>
             </li>
             <li class="menu__item">
-              <a href="#gallery" class="menu__link">Gallery</a>
+              <a href="#gallery" class="menu__link">Відвідування</a>
             </li>
             <li class="menu__item">
-              <a href="#testimonials" class="menu__link">Testimonials</a>
-            </li>
-            <li class="menu__item">
-              <a href="#contact-us" class="menu__link">Contact</a>
+              <a href="#testimonials" class="menu__link">Стати нашим другом</a>
             </li>
           </ul>
-          <a
-            href="tel:+1 234 555-55-55"
-            class="menu__call menu__call--phone"
-          >
-            +1 234 555-55-55
-          </a>
-          <a
-            href="tel:+1 234 555-55-55"
-            class="menu__call menu__call--action"
-          >
-            call to order
-          </a>
         </div>
       </div>
     </nav> -->
@@ -176,9 +152,9 @@
           </div>
         </div>
         <div class="events__place place">
-          <div class="grid grid--desktop">
+          <div class="grid grid--desktop container">
             <div class="grid__item grid__item--1-16">
-              <div class="place__photo-container container__mobile">
+              <div class="place__photo-container container__mobile container__absolute">
                 <img
                   src="./images/main/main-2.png"
                   alt="Second event"
@@ -279,11 +255,11 @@
             <div class="grid__item grid__item--6-10 grid__row-3 grid--desktop">
               <div class="substriction__title container__mobile">Підписка</div>
             </div>
-            <div class="grid__item grid__item--5-13 grid__row-3 grid--desktop">
-              <div class="substriction__content container">Бути в курсі всіх актуальних подій та останніх новин.</div>
+            <div class="grid__item grid__item--6-13 grid__row-3 grid--desktop">
+              <div class="substriction__content container__mobile">Бути в курсі всіх актуальних подій та останніх новин.</div>
             </div>
             <div class="grid__item grid__item--6-13 grid--desktop">
-              <div class="substriction__form container container__absolute">
+              <div class="substriction__form container__mobile">
                 <form action="#" method="get">
                   <input
                     type="email"
@@ -301,8 +277,8 @@
       </section>
     </main>
 
-    <footer class="footer container">
-      <div class="grid grid--desktop">
+    <footer class="footer">
+      <div class="grid grid--desktop container">
         <div class="grid__item grid__item--1-2">
           <div class="footer__links container__absolute">
             <a href="#" class="logo--footer">
