--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <img src="images/National.png" alt="museum" class="header__background">
       <div class="header__left">
         <h1 class="header__title">ХУДОЖ<span class="header__title--1">НІЙ</span> <br> МУЗЕЙ</h1>
-        <a href="" class="header__buy-button">
+        <a href="#subscription" class="header__buy-button">
           <div class="header__buy-button-text"></div>
           <div class="header__buy-button-arrow"></div>
         </a>
@@ -283,14 +283,22 @@
             </a>
     
             <div class="footer__icons">
-              <a href="#" class="footer__face">
+              <a
+                href="https://www.facebook.com/pages/%D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9%20%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9%20%D0%BC%D1%83%D0%B7%D0%B5%D0%B9%20%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B/103711186386910/"
+                class="footer__face"
+                target="_blank"
+              >
                 <img
                   src="./images/facebook.png"
                   alt="facebook"
                   class="footer__f"
                 >
               </a>
-              <a href="#" class="footer__icon">
+              <a
+                href="https://www.instagram.com/namu.museum/?hl=ru"
+                class="footer__icon"
+                target="_blank"
+              >
                 <img
                   src="./images/insta.png"
                   alt="insta"
