--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="menu__nav">
-            <ul>
+            <ul class="menu__nav--list">
               <li class="menu__nav--item">
                 <a href="#gallery" class="menu__nav--link">Галерея</a>
               </li>
@@ -235,11 +235,12 @@
           </div>
           <form
             action="#"
-            method="POST"
+            method="GET"
             class="subscription__button"
             >
             <input
               type="email"
+              name="email"
               class="subscription__button--email"
               placeholder="E-mail"
               >
@@ -285,7 +286,12 @@
               </div>
               <div class="contact__grafic--contact">
                 <h3 class="contact__title">Контакти:</h3>
-                <p class="contact__text">вул. М. Грушевського, 6;<br>Київ, 01001<br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54<br>e-mail: info@namu.kiev.ua</p>
+                <p class="contact__text">
+                  <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA">вул. М.Грушевського, 6; Київ, 01001</a><br>
+                  <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
+                  <a href="tel:+380442787454">факс +38 (044) 278-74-54</a><br>
+                  <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                </p>
               </div>
             </div>
             <nav class="contact__nav">
