--- a/src/index.html
+++ b/src/index.html
@@ -286,12 +286,12 @@
               </div>
               <div class="contact__grafic--contact">
                 <h3 class="contact__title">Контакти:</h3>
-                <p class="contact__text">
-                  <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA">вул. М.Грушевського, 6; Київ, 01001</a><br>
-                  <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
-                  <a href="tel:+380442787454">факс +38 (044) 278-74-54</a><br>
-                  <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
-                </p>
+                <div class="contact__desk">
+                  <a href="https://goo.gl/maps/oAXBGxmFbJB2M8XNA" class="contact__text">вул. М.Грушевського,6;<br>Київ, 01001</a><br>
+                  <a href="tel:+380442781357" class="contact__text">тел. +38 (044) 278-13-57</a><br>
+                  <a href="tel:+380442787454" class="contact__text">факс +38 (044) 278-74-54</a><br>
+                  <a href="mailto:info@namu.kiev.ua" class="contact__text">e-mail: info@namu.kiev.ua</a>
+                </div>
               </div>
             </div>
             <nav class="contact__nav">
